--- a/domestic-solar-panel-installation-ng.html
+++ b/domestic-solar-panel-installation-ng.html
@@ -49,25 +49,25 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/about">About</a>
+          <a class="nav-link active" aria-current="page" href="/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/domestic-solar-installation-ng">Residential</a>
+          <a class="nav-link active" aria-current="page" href="/domestic-solar-panel-installation-ng.html">Residential</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/commercial-solar-installation-ng">Commercial</a>
+          <a class="nav-link active" aria-current="page" href="/commercial-solar-panel-installation-ng.html">Commercial</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/blogs">Blogs</a>
+          <a class="nav-link active" aria-current="page" href="/blogs.html">Blogs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/conntact">Contact</a>
+          <a class="nav-link active" aria-current="page" href="/contact.html">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/support">Support</a>
+          <a class="nav-link active" aria-current="page" href="/support.html">Support</a>
         </li>
         
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Products
           </a>
@@ -90,7 +90,7 @@
             <li><hr class="dropdown-divider"></li>
 
           </ul>
-        </li>
+        </li> -->
        
       </ul>
       <form class="d-flex" role="search">
