--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/about">About</a>
+          <a class="nav-link active" aria-current="page" href="/about.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/domestic-solar-panel-installation-ng.html">Residential</a>
@@ -58,16 +58,16 @@
           <a class="nav-link active" aria-current="page" href="/commercial-solar-panel-installation-ng.html">Commercial</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/blogs">Blogs</a>
+          <a class="nav-link active" aria-current="page" href="/blogs.html">Blogs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/contact">Contact</a>
+          <a class="nav-link active" aria-current="page" href="/contact.html">Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="./support.html">Support</a>
         </li>
         
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Products
           </a>
@@ -90,7 +90,7 @@
             <li><hr class="dropdown-divider"></li>
 
           </ul>
-        </li>
+        </li> -->
        
       </ul>
       <form class="d-flex" role="search">
@@ -105,7 +105,7 @@
   <!-- Title -->
   <section id="title" class="hero-section gradient-background" >
 
-    <div class="container col-xxl-8 px-4 py- te5" >
+    <div class="container col-xxl-8 px-4 py-5 te5" >
       <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
         <div class="col-12 col-sm-12 col-lg-6">
           <h2>Go Solar</h2>
