--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav mx-auto me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/about.html">About</a>
         </li>
@@ -67,7 +67,7 @@
           <a class="nav-link active" aria-current="page" href="/support.html">Support</a>
         </li>
         
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Products
           </a>
@@ -91,7 +91,7 @@
 
           </ul>
         </li>
-       
+        -->
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -810,7 +810,7 @@
   <!-- Footer -->
   <section id="contact" class="gradient-background mb-0 pb-0">
     <div class="container ">
-      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 border-top text-light ">
+      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 border-top  ">
         <div class="col mb-3 middle">
 
           <img src="./goal images/logomain2.png" alt="">
@@ -824,27 +824,26 @@
 
         </div>
 
-        <div class="col mb-3 text-light middle">
-          <h5>SERVICE</h5>
-          <ul class="nav flex-column text-light">
-            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-light">Residential Solar PV</a></li>
-            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-light">Commercial Solar PV</a></li>
-            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-light">Batteries</a></li>
-            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-light">EV Chargers</a></li>
-            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-light">Solar Accessories</a></li>
+        <div class="col mb-3 middle">
+          <h5>SERVICES</h5>
+          <ul class="nav flex-column ">
+            <li class="nav-item mb-2 "><a href="/mini-grid.html" class="nav-link p-0 text-dark">Mini-Grid</a></li>
+            <li class="nav-item mb-2 "><a href="/balcony-solar.html" class="nav-link p-0 text-dark">Balcony Solar</a></li>
+            <li class="nav-item mb-2 "><a href="/battery-storage.html" class="nav-link p-0 text-dark">Battery Storage</a></li>
+            <li class="nav-item mb-2 "><a href="/ev-charging.html" class="nav-link p-0 text-dark">EV Charging</a></li>
+            <li class="nav-item mb-2 "><a href="/agricultural-solar.html" class="nav-link p-0 text-dark">Agricultural Solar</a></li>
           </ul>
         </div>
 
         <div class="col mb-3 middle">
           <h5>SITEMAP</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Home</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">About</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Blogs</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Support</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Contact Us</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Privacy Policy</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Privacy Policy</a></li>
+            <li class="nav-item mb-2"><a href="/" class="nav-link p-0 text-dark">Home</a></li>
+            <li class="nav-item mb-2"><a href="/about.html" class="nav-link p-0 text-dark">About</a></li>
+            <li class="nav-item mb-2"><a href="/blogs.html" class="nav-link p-0 text-dark">Blogs</a></li>
+            <li class="nav-item mb-2"><a href="/support.html" class="nav-link p-0 text-dark">Support</a></li>
+            <li class="nav-item mb-2"><a href="/contact.html" class="nav-link p-0 text-dark">Contact Us</a></li>
+            <li class="nav-item mb-2"><a href="./privacy.html" class="nav-link p-0 text-dark">Privacy Policy</a></li>
 
 
           </ul>
@@ -854,16 +853,15 @@
         <div class="col mb-3 middle">
           <h5>GET IN TOUCH</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Home</a></li>
-            <li class="nav-item mb-2"><a href="tel:+234 806 037 6481" class="nav-link p-0 text-light"><i class="bi bi-phone currentColor"></i>+234 806 037 6481</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light"><i class="bi bi-whatsapp"></i> Whatsapp</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light"><i class="bi bi-facebook"></i> Facebook</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light"><i class="bi bi-google"></i> Email</a></li>
+            <li class="nav-item mb-2"><a href="tel:+234 806 037 6481" class="nav-link p-0 text-dark"><i class="bi bi-phone currentColor"></i>+234 806 037 6481</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark"><i class="bi bi-whatsapp"></i> Whatsapp</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark"><i class="bi bi-facebook"></i> Facebook</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark"><i class="bi bi-google"></i> Email</a></li>
           </ul>
         </div>
 
       </footer>
-      <p class="text-light mb-0 row mx-auto  pb-4 w-50">Solar Renewables Limited is Registered in Nigeria under the Corporate Affairs Commission CAC with RC</p>
+      <p class=" mb-0 row mx-auto  pb-4 w-50">Solar Renewables Limited is Registered in Nigeria under the Corporate Affairs Commission CAC with RC</p>
 
     </div>
 
