--- a/inverter-calculator.html
+++ b/inverter-calculator.html
@@ -33,7 +33,7 @@
     
     .first-container {
         background-image: url('https://www.elhadjseck.com/luminous-load-calculator/load icons/load icons/calculator.png');
-        background-size: 3000px;
+        background-size: 300px;
         background-repeat: no-repeat;
         background-position: right;
     }
@@ -230,7 +230,7 @@
 
 <body>
 
-   <div class="first-container" style="background-color: #0f57ad; height: 400px;">
+   <div class="first-container" style="background-color: #62825D; height: 400px;">
 
        <div class="lg-text-headline tw-text-center" style="color: white; padding-top: .5rem">Enter the appliance your inverter will power
        </div>
@@ -333,7 +333,7 @@
             class="property-type-button tw-w-full tw-rounded-lg tw-flex tw-items-center tw-gap-2 tw-py-3 tw-px-2 tw-group tw-duration-200 lg:tw-max-w-[10rem] lg-card"
            fdprocessedid="pfzf66">
                <div style="position: relative" class="tw-rounded-full tw-p-1.5 tw-w-full tw-h-8">
-                       <div style="position: absolute; left: -10px; top: -40px">
+                       <div style="position: absolute; left: -10px; top: -41px">
                            <img
                                src="./images/${property[0]}.png" class="dark:tw-invert-0 tw-invert" loading="lazy"
                                style="width: 7rem !important">
