--- a/load-calculator.html
+++ b/load-calculator.html
@@ -306,7 +306,7 @@ integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJ
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/load-calculator.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle active" href="/load-calculator.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Load Calculator
               </a>
               <ul class="dropdown-menu">
