--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
           <a class="nav-link active" aria-current="page" href="/commercial-solar-panel-installation-ng.html">Commercial</a>
         </li>
          <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Services
           </a>
           <ul class="dropdown-menu">
@@ -81,7 +81,7 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/load-calculator.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle active" href="/load-calculator.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Load Calculator
           </a>
           <ul class="dropdown-menu">
