Updated the website with bio gas and waste to energy and the colors

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sollaren</title>
+  <title>Solar Renewables Ltd.</title>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="solar energy company, solar panels, solar installer, gas-and-biofuel, waste-to-energy, solar products" name="keywords">
+  <meta content="Solar Energy deals, products, installations, quotations, and contracts. Helping Nigeria solve renewable energy problems." name="description">
+
+  <!-- Favicons -->
+  <link href="./goal images/logomain2.png" rel="icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
@@ -76,7 +80,9 @@
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="/ev-charging.html">EV Charging</a></li>
               <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="/gas-and-biofuel.html">Gas And Biofuels</a></li>
               <li><a class="dropdown-item" href="/agricultural-solar.html">Agricultural Solar</a></li>
+              <li><a class="dropdown-item" href="/waste-to-energy.html">Waste To Energy</a></li>
               <li><hr class="dropdown-divider"></li>
              
   
@@ -165,8 +171,8 @@
             </div>
             <h2>Canadian Solar Panels</h2>
             <p>Canadian Solar Panel’s cutting-edge Mono and Poly Crystalline module cell technology now delivers compact, high-density panels with exceptional efficiency. Backed by a 30+ year warranty, our panels stand out as the top choice in today’s market..</p>
-            <a href="#" class=" btn btn-secondary">
-              Learn More
+            <a href="/contact.html" class=" btn btn-secondary">
+              Learn  ore.
               <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
             </a>
           </div>
@@ -177,7 +183,7 @@
             <h2>Jinko Solar Panels
             </h2>
             <p>Explore our range of premium Jinko solar panels, offering over 30 years of warranty, enhanced reliability, superior low-light performance, reduced operating temperatures, exceptional PID resistance, high compatibility, and more.</p>
-            <a href="#" class=" btn btn-secondary">
+            <a href="/contact.html" class=" btn btn-secondary">
               Learn More
               <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
             </a>
@@ -188,7 +194,7 @@
             </div>
             <h2>Hybrid Solar Panels:</h2>
             <p>Discover our versatile range of off-grid, on-grid, and hybrid solar panels, designed for over 30 years of durability, exceptional efficiency, reliable performance, seamless integration, advanced energy management, and adaptability for diverse energy needs.</p>
-            <a href="#" class=" btn btn-secondary">
+            <a href="/contact.html" class=" btn btn-secondary">
               Learn More
               <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
             </a>
@@ -208,7 +214,7 @@
           </div>
           <h2>SVC All in One Solar System</h2>
           <p>The RPS Series Energy Solar Energy Storage System (ESS) is an innovative all-in-one solution that combines the benefits of off-grid solar power with advanced energy storage technology. This state-of-the-art system features a high-performance 5kW 48V solar inverter paired with durable 10.24kWh LiFePO4 lithium battery modules, providing a reliable and self-sustaining energy solution for your home.</p>
-          <a href="#" class=" btn btn-secondary">
+          <a href="/mini-grid.html" class=" btn btn-secondary">
             Learn More
             <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
           </a>
@@ -220,7 +226,7 @@
           <h2>Deep-Cycle Inverter Batteries
           </h2>
           <p>Our deep-cycle solar batteries are designed for maximum efficiency and durability, offering an extended lifespan. We provide premium Lithium, Trojan, and Newmax inverter batteries, each with a lifespan exceeding 10 years and backed by industry-leading warranties. Additionally, we sell and supply high-quality dry-cell solar batteries in various capacities, sourced from the world’s top manufacturers.</p>
-          <a href="#" class=" btn btn-secondary">
+          <a href="/battery-storage.html" class=" btn btn-secondary">
             Learn More
             <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
           </a>
@@ -231,7 +237,7 @@
           </div>
           <h2>Growatt Inverters:</h2>
           <p>Growatt provides a versatile range of intelligent solar inverter solutions designed for residential, commercial, and utility-scale solar installations. Our innovative string PV inverters are available in various capacities, ensuring the ideal fit for your solar energy requirements.</p>
-          <a href="#" class=" btn btn-secondary">
+          <a href="/contact.html" class=" btn btn-secondary">
             Learn More
             <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
           </a>
@@ -242,7 +248,7 @@
           </div>
           <h2>Online Uninterruptible Power Supply:</h2>
           <p>Discover our versatile range of off-grid, on-grid, and hybrid solar panels, designed for over 30 years of durability, exceptional efficiency, reliable performance, seamless integration, advanced energy management, and adaptability for diverse energy needs.</p>
-          <a href="#" class=" btn btn-secondary">
+          <a href="/battery-storage.html" class=" btn btn-secondary">
             Learn More
             <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
           </a>
@@ -253,7 +259,7 @@
           </div>
           <h2>EV Chargers:</h2>
           <p>We provide EV charger solutions designed for homes, businesses, and public spaces. Our chargers combine smart technology with reliable performance, offering a seamless and efficient charging experience for all electric vehicles..</p>
-          <a href="#" class=" btn btn-secondary">
+          <a href="/ev-charging.html" class=" btn btn-secondary">
             Learn More
             <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
           </a>
@@ -265,7 +271,7 @@
           <h2>Solar Mount Accessories
             :</h2>
           <p>We deal in various Solar Panel Mount Accessories like Solar Mount Rails, End Clamps, Mid Clamps, Splice Bar, Serrated L Foot,  etc</p>
-          <a href="#" class=" btn btn-secondary">
+          <a href="/contact.html" class=" btn btn-secondary">
             Learn More
             <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
           </a>
@@ -832,7 +838,7 @@
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 border-top  ">
         <div class="col mb-3 middle">
 
-          <img src="./goal images/logomain2.png" alt="">
+          <img src="./goal images/logomain2.png" alt="" width="50">
           <h4>Head Office:</h4>
           <h5>Solar Renewables Ltd.</h5>
           <p>46 Layout, Abuja. Nigeria</p>
@@ -851,6 +857,9 @@
             <li class="nav-item mb-2 "><a href="/battery-storage.html" class="nav-link p-0 text-dark">Battery Storage</a></li>
             <li class="nav-item mb-2 "><a href="/ev-charging.html" class="nav-link p-0 text-dark">EV Charging</a></li>
             <li class="nav-item mb-2 "><a href="/agricultural-solar.html" class="nav-link p-0 text-dark">Agricultural Solar</a></li>
+            <li class="nav-item mb-2 "><a href="/gas-and-biofuel.html" class="nav-link p-0 text-dark">Gas And Biofuels</a></li>
+            <li class="nav-item mb-2 "><a href="/waste-to-energy.html" class="nav-link p-0 text-dark">Waste To Energy</a></li>
+
           </ul>
         </div>
 
